syntax = "proto3";

package vocab;

option go_package = "broker-service/proto";

message WordRequest {
    uint32 word_id = 1;
}